# deezconfigs

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  Justfile  Makefile  README.md
examples/: post-rsync.sh  post-sync.sh
src/: cmd.rs  hooks.rs  lib.rs  main.rs  ui.rs  utils.rs  walk.rs
src/cmd/: clean.rs  cli.rs  common.rs  diff.rs  link.rs  rsync.rs  run.rs  status.rs  sync.rs
src/ui/: color.rs  io.rs
tests/: test_bin_deez.rs  test_bin_deez_clean.rs  test_bin_deez_diff.rs  test_bin_deez_link.rs  test_bin_deez_rsync.rs  test_bin_deez_run.rs  test_bin_deez_status.rs  test_bin_deez_sync.rs
tests/conf/: mod.rs
tests/fixtures/: bin_exit_non_zero.sh  bin_output_args_and_pwd_to_files.sh
tests/run/: mod.rs
tests/utils/: conf.rs  files.rs  mod.rs  run.rs
