[package]
name = "deezconfigs"
version = "0.0.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Manage deez config files."
license = "GPL-3.0-or-later"
repository = "https://github.com/qrichert/deez.git"
readme = "README.md"
keywords = ["config", "configuration", "manager", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "deez"
path = "src/main.rs"

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
