[package]
name = "deezconfigs"
version = "0.15.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Manage deez config files."
license = "GPL-3.0-or-later"
repository = "https://github.com/qrichert/deezconfigs.git"
readme = "README.md"
keywords = ["config", "configuration", "manager", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "deez"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
# Find files recursively, respecting ignore patterns.
ignore = "0.4.23"
# Diff files.
# TODO: See <https://github.com/helix-editor/helix/pull/13722/files> for `0.2.0`.
imara-diff = "0.1.8"
# Output text through a pager.
lessify = "0.4.0"
